# foobar2000_sdk

./: .editorconfig  .gitignore  CMakeLists.txt  README.rst  sdk-license.txt
atl/: CMakeLists.txt
atl/include/: ATLComTime.h  atlbase.h  atlbuild.h  atlcomcli.h  atldb.h  atldbcli.h  atlhost.h  atlsecurity.h  atlwin.h
atl/lib/: atls.lib
atl/lib/amd64/: atls.lib
foobar2000/: CMakeLists.txt
foobar2000/ATLHelpers/: CMakeLists.txt  WTL-PP.h  misc.h
foobar2000/SDK/: CMakeLists.txt  abort_callback.h  advconfig.h  audio_chunk.cpp  audio_chunk.h  audio_chunk_channel_config.cpp  componentversion.cpp  core_api.h  decode_postprocessor.h  dsp_manager.cpp  exceptions.h  file_cached_impl.cpp  file_info.cpp  file_info.h  file_info_merge.cpp  filesystem.cpp  filesystem.h  filesystem_helper.cpp  filesystem_helper.h  foobar2000.h  foobar2000_SDK.vcxproj  foobar2000_SDK.vcxproj.filters  guids.cpp  input.cpp  input.h  main_thread_callback.h  metadb_handle.cpp  metadb_handle.h  output.h  packet_decoder.cpp  packet_decoder.h  playable_location.cpp  playable_location.h  playback_control.h  playlist_loader.cpp  replaygain.cpp  replaygain.h  service.h  service_impl.h  tag_processor.cpp  (+1 more)
foobar2000/columns_ui-sdk/: CMakeLists.txt  columns_ui.h  splitter.h  window.h
foobar2000/foo_sample/: CMakeLists.txt  contextmenu.cpp
foobar2000/foo_wave_seekbar/frontend_direct2d/: CMakeLists.txt
foobar2000/foo_wave_seekbar/frontend_direct3d9/: CMakeLists.txt
foobar2000/foobar2000_component_client/: CMakeLists.txt
foobar2000/helpers/: CMakeLists.txt  CPowerRequest.h  CallForwarder.h  IDataObjectUtils.cpp  ProcessUtils.h  VisUtils.cpp  cue_parser.h  cue_parser_embedding.cpp  dialog_resize_helper.cpp  file_win32_wrapper.cpp  foobar2000_sdk_helpers.vcxproj  foobar2000_sdk_helpers.vcxproj.filters  helpers.h  input_helpers.cpp  input_helpers.h  listview_helper.cpp  listview_helper.h  meta_table_builder.h  mp3_utils.cpp  win32_misc.cpp  win32_misc.h  window_placement_helper.cpp  writer_wav.cpp  writer_wav.h
foobar2000/shared/: CMakeLists.txt  audio_math.h  shared.h  shared.lib  win32_misc.h
pfc/: CMakeLists.txt  alloc.h  array.h  audio_math.cpp  audio_sample.cpp  audio_sample.h  byte_order_helper.h  cpu-features.c  cpu-features.h  cpuid.cpp  cpuid.h  guid.cpp  guid.h  int_types.h  iterators.h  license.txt  list.h  map.h  memalign.h  nix-objects.cpp  nix-objects.h  nix-objects.h.bak  other.cpp  other.h  pathUtils.h  pfc.h  pfc.vcxproj  primitives.h  printf.cpp  profiler.h  ref_counter.h  selftest.cpp  sort.cpp  string.cpp  string.h  stringNew.h  string_base.cpp  string_base.h  string_conv.h  synchro_nix.cpp  (+9 more)
wtl/: CMakeLists.txt  atlapp.h  atlgdi.h  atluser.h
