add_library(pfc STATIC
	"alloc.h"
	"array.h"
	"avltree.h"
	"base64.cpp"
	"base64.h"
	"binary_search.h"
	"bit_array.cpp"
	"bit_array.h"
	"bit_array_impl.h"
	"bit_array_impl_part2.h"
	"bsearch.cpp"
	"bsearch.h"
	"bsearch_inline.h"
	"byte_order_helper.h"
	"chain_list_v2.h"
	"com_ptr_t.h"
	"cpuid.cpp"
	"cpuid.h"
	"guid.cpp"
	"guid.h"
	"instance_tracker.h"
	"int_types.h"
	"iterators.h"
	"list.h"
	"map.h"
	"mem_block_mgr.h"
	"memalign.h"
	"order_helper.h"
	"other.cpp"
	"other.h"
	"pathUtils.cpp"
	"pathUtils.h"
	"pfc.h"
	"primitives.h"
	"primitives_part2.h"
	"printf.cpp"
	"profiler.cpp"
	"profiler.h"
	"ptr_list.h"
	"rcptr.h"
	"ref_counter.h"
	"sort.cpp"
	"sort.h"
	"string.cpp"
	"string.h"
	"string8_impl.h"
	"stringNew.cpp"
	"stringNew.h"
	"string_conv.cpp"
	"string_conv.h"
	"string_list.h"
	"threads.cpp"
	"threads.h"
	"traits.h"
	"utf8.cpp"
)