add_library(pfc STATIC
	"alloc.h"
	"array.h"
	"audio_math.cpp"
	"audio_sample.cpp"
	"audio_sample.h"
	"avltree.h"
	"base64.cpp"
	"base64.h"
	"binary_search.h"
	"bit_array.cpp"
	"bit_array.h"
	"bit_array_impl.h"
	"bit_array_impl_part2.h"
	"bsearch.cpp"
	"bsearch.h"
	"bsearch_inline.h"
	"byte_order_helper.h"
	"chain_list_v2.h"
	"com_ptr_t.h"
	"cpu-features.h"
	"cpuid.cpp"
	"cpuid.h"
	"event.h"
	"filehandle.cpp"
	"filehandle.h"
	"guid.cpp"
	"guid.h"
	"instance_tracker.h"
	"int_types.h"
	"iterators.h"
	"list.h"
	"map.h"
	"memalign.h"
	"mem_block_mgr.h"
	"order_helper.h"
	"other.cpp"
	"other.h"
	"pathUtils.cpp"
	"pathUtils.h"
	"pfc.h"
	"primitives.h"
	"primitives_part2.h"
	"printf.cpp"
	"ptr_list.h"
	"rcptr.h"
	"ref_counter.h"
	"selftest.cpp"
	"sort.cpp"
	"sort.h"
	"string8_impl.h"
	"stringNew.cpp"
	"stringNew.h"
	"string_base.cpp"
	"string_base.h"
	"string_conv.cpp"
	"string_conv.h"
	"string_list.h"
	"syncd_storage.h"
	"synchro_win.h"
	"threads.cpp"
	"threads.h"
	"timers.cpp"
	"timers.h"
	"traits.h"
	"utf8.cpp"
	"wildcard.cpp"
	"wildcard.h"
	"win-objects.cpp"
	"win-objects.h"
)