set(SDK_SOURCES
	"abort_callback.cpp"
	"abort_callback.h"
	"advconfig.cpp"
	"advconfig.h"
	"album_art.cpp"
	"album_art.h"
	"app_close_blocker.cpp"
	"app_close_blocker.h"
	"audio_chunk.cpp"
	"audio_chunk.h"
	"audio_chunk_channel_config.cpp"
	"audio_postprocessor.h"
	"autoplaylist.h"
	"cfg_var.cpp"
	"cfg_var.h"
	"chapterizer.cpp"
	"chapterizer.h"
	"commandline.cpp"
	"commandline.h"
	"completion_notify.cpp"
	"completion_notify.h"
	"component.h"
	"components_menu.h"
	"componentversion.h"
	"component_client.h"
	"config_io_callback.h"
	"config_object.cpp"
	"config_object.h"
	"config_object_impl.h"
	"console.cpp"
	"console.h"
	"contextmenu.h"
	"contextmenu_manager.h"
	"coreversion.h"
	"core_api.h"
	"decode_postprocessor.h"
	"dsp.cpp"
	"dsp.h"
	"dsp_manager.cpp"
	"dsp_manager.h"
	"event_logger.h"
	"exceptions.h"
	"filesystem.cpp"
	"filesystem.h"
	"filesystem_helper.cpp"
	"filesystem_helper.h"
	"file_info.cpp"
	"file_info.h"
	"file_info_impl.cpp"
	"file_info_impl.h"
	"file_info_merge.cpp"
	"file_operation_callback.cpp"
	"file_operation_callback.h"
	"foobar2000.h"
	"genrand.h"
	"guids.cpp"
	"hasher_md5.cpp"
	"hasher_md5.h"
	"http_client.h"
	"icon_remap.h"
	"info_lookup_handler.h"
	"initquit.h"
	"input.cpp"
	"input.h"
	"input_file_type.cpp"
	"input_file_type.h"
	"input_impl.h"
	"library_manager.h"
	"link_resolver.cpp"
	"link_resolver.h"
	"mainmenu.cpp"
	"main_thread_callback.h"
	"mem_block_container.cpp"
	"mem_block_container.h"
	"menu.h"
	"menu_helpers.cpp"
	"menu_helpers.h"
	"menu_item.cpp"
	"menu_manager.cpp"
	"message_loop.h"
	"metadb.cpp"
	"metadb.h"
	"metadb_handle.cpp"
	"metadb_handle.h"
	"metadb_handle_list.cpp"
	"modeless_dialog.h"
	"ole_interaction.h"
	"packet_decoder.cpp"
	"packet_decoder.h"
	"playable_location.cpp"
	"playable_location.h"
	"playback_control.cpp"
	"playback_control.h"
	"playback_stream_capture.h"
	"playlist.cpp"
	"playlist.h"
	"playlist_loader.cpp"
	"playlist_loader.h"
	"play_callback.h"
	"popup_message.cpp"
	"popup_message.h"
	"preferences_page.cpp"
	"preferences_page.h"
	"progress_meter.h"
	"replaygain.cpp"
	"replaygain.h"
	"replaygain_info.cpp"
	"replaygain_scanner.h"
	"resampler.h"
	"search_tools.h"
	"service.cpp"
	"service.h"
	"service_impl.h"
	"shortcut_actions.h"
	"system_time_keeper.h"
	"tag_processor.cpp"
	"tag_processor.h"
	"tag_processor_id3v2.cpp"
	"threaded_process.cpp"
	"threaded_process.h"
	"titleformat.cpp"
	"titleformat.h"
	"track_property.h"
	"ui.cpp"
	"ui.h"
	"ui_edit_context.h"
	"ui_element.cpp"
	"ui_element.h"
	"unpack.h"
	"vis.h"
)

add_definitions(-Zm300)
enable_precompiled_headers("foobar2000.h" SDK_SOURCES)
add_library(SDK STATIC ${SDK_SOURCES})